--- a/Client/Dt.App/Workflow/RunTime/HistoryTasks.xaml
+++ b/Client/Dt.App/Workflow/RunTime/HistoryTasks.xaml
@@ -40,7 +40,7 @@
                 <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
                     <a:Ex.Menu>
                         <a:Menu>
-                            <a:Mi ID="查看表单" Icon="详细" Click="OnShowInst" />
+                            <a:Mi ID="查看表单" Icon="全选" Click="OnShowInst" />
                             <a:Mi ID="追回" Icon="追回" Click="OnRetrieve" />
                             <a:Mi ID="日志" Icon="审核" Click="OnShowLog" />
                         </a:Menu>
