--- a/Client/Dt.Base/FileList/Parts/UpdateFileDlg.xaml
+++ b/Client/Dt.Base/FileList/Parts/UpdateFileDlg.xaml
@@ -5,7 +5,7 @@
     xmlns:a="using:Dt.Base">
 
     <StackPanel>
-        <a:BtnItem Icon="详细" Title="选择更新文件" Click="OnSelect" />
+        <a:BtnItem Icon="文件夹" Title="选择更新文件" Click="OnSelect" />
         <a:BtnItem Icon="曲别针" Title="上传更新文件" Click="OnUpload" />
     </StackPanel>
 </a:Dlg>
