--- a/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
+++ b/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
@@ -29,7 +29,7 @@
                 <a:Lv x:Name="_lvPrv" ItemClick="OnItemClick" DataChanged="OnDataChanged">
                     <a:Ex.Menu>
                         <a:Menu>
-                            <a:Mi ID="编辑" Icon="铅笔" Click="OnEditPrv" />
+                            <a:Mi ID="编辑" Icon="编辑" Click="OnEditPrv" />
                             <a:Mi ID="删除" Icon="删除" Click="OnDelPrv" />
                         </a:Menu>
                     </a:Ex.Menu>
@@ -51,8 +51,8 @@
                         <a:Mi ID="添加" Icon="加号" Click="OnAddRole" IsEnabled="{Binding HasSelected,ElementName=_lvPrv}" />
                         <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveRole" IsEnabled="{Binding HasSelected,ElementName=_lvRole}" Visibility="Collapsed" />
                         <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
-                        <a:Mi ID="选择" Icon="详细" Click="OnMultiMode" />
-                        <a:Mi ID="取消" Icon="详细" Click="OnCancelMulti" Visibility="Collapsed" />
+                        <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
+                        <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Lv x:Name="_lvRole">
