--- a/Client/Dt.App/Publish/Edit/PostMgr.xaml
+++ b/Client/Dt.App/Publish/Edit/PostMgr.xaml
@@ -28,11 +28,11 @@
                                     <a:Dot ID="Creator" Foreground="{StaticResource 深灰边框}" FontSize="12" />
                                     <a:Dot ID="Ctime" Foreground="{StaticResource 深灰边框}" FontSize="12" />
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="&#xE057;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
+                                        <TextBlock Text="&#xE062;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
                                         <a:Dot ID="ReadCount" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="4,0,0,0" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="&#xE072;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
+                                        <TextBlock Text="&#xE07F;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
                                         <a:Dot ID="CommentCount" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="4,0,0,0" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
@@ -55,7 +55,7 @@
                         <a:Mi ID="新建" Icon="加号" ShowInPhone="Icon" Click="OnAddPost" />
                         <a:Mi ID="保存" Icon="保存" Click="OnSavePost" IsEnabled="{Binding IsDirty,ElementName=_fv}" />
                         <a:Mi ID="删除" Icon="删除" Click="OnDelPost" />
-                        <a:Mi ID="编辑内容" Icon="铅笔" Click="OnEditContent" />
+                        <a:Mi ID="编辑内容" Icon="编辑" Click="OnEditContent" />
                         <a:Mi ID="预览" Icon="公告" Click="OnExplore" />
                     </a:Menu>
                 </a:Tab.Menu>
