--- a/Client/Dt.App/Workflow/Mgr/WfInstMgr.xaml
+++ b/Client/Dt.App/Workflow/Mgr/WfInstMgr.xaml
@@ -42,7 +42,7 @@
                 <a:Lv x:Name="_lv" ViewMode="Table" ItemClick="OnItemClick" ItemDoubleClick="OnItemDoubleClick">
                     <a:Ex.Menu>
                         <a:Menu>
-                            <a:Mi ID="查看表单" Icon="详细" Click="OnShowInst" />
+                            <a:Mi ID="查看表单" Icon="全选" Click="OnShowInst" />
                         </a:Menu>
                     </a:Ex.Menu>
                     <a:Cols>
