--- a/Client/Dt.Base/Structure/Tools/StateDb.xaml
+++ b/Client/Dt.Base/Structure/Tools/StateDb.xaml
@@ -12,7 +12,7 @@
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="删除" Icon="删除" Click="OnDel" IsEnabled="{Binding HasSelected,ElementName=_lvData}" />
-                        <a:Mi ID="多选" Icon="详细" IsCheckable="True" a:Ex.LvMultiSelect="{Binding ElementName=_lvData}" />
+                        <a:Mi ID="多选" Icon="全选" IsCheckable="True" a:Ex.LvMultiSelect="{Binding ElementName=_lvData}" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Lv x:Name="_lvData" AutoCreateCol="True" />
