--- a/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
@@ -37,7 +37,7 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Border Background="{StaticResource 主题蓝色}" Height="50" Width="50" VerticalAlignment="Center">
-                                    <TextBlock Text="&#xE03C;"
+                                    <TextBlock Text="&#xE060;"
                                                FontFamily="{StaticResource IconFont}"
                                                FontSize="30"
                                                Foreground="White"
