--- a/Client/Dt.Sample/ListView/LvContextMenu.xaml
+++ b/Client/Dt.Sample/ListView/LvContextMenu.xaml
@@ -29,7 +29,7 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Border Background="{StaticResource 主题蓝色}" Height="50" Width="50" VerticalAlignment="Center">
-                    <TextBlock Text="&#xE03C;"
+                    <TextBlock Text="&#xE060;"
                                 FontFamily="{StaticResource IconFont}"
                                 FontSize="30"
                                 Foreground="White"
@@ -58,7 +58,7 @@
                     <ColumnDefinition Width="50" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="&#xE03C;"
+                <TextBlock Text="&#xE060;"
                            FontFamily="{StaticResource IconFont}"
                            FontSize="30"
                            VerticalAlignment="Center"
