--- a/Client/Dt.Sample/ListView/LvViewBase.xaml
+++ b/Client/Dt.Sample/ListView/LvViewBase.xaml
@@ -62,7 +62,7 @@
                     <ColumnDefinition Width="50" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="&#xE03C;"
+                <TextBlock Text="&#xE060;"
                             FontFamily="{StaticResource IconFont}"
                             FontSize="30"
                             VerticalAlignment="Center"
