--- a/Client/Dt.Sample/Styles/IconDemo.xaml
+++ b/Client/Dt.Sample/Styles/IconDemo.xaml
@@ -4,7 +4,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <ScrollViewer HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
-        <Grid x:Name="_container" Margin="10" />
-    </ScrollViewer>
+    <Grid MaxWidth="800" Margin="0,-1,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <a:SearchBox x:Name="_sb" Search="OnSearch" Placeholder="请输入名称或简码" IsRealtime="True" />
+        <a:Lv x:Name="_lv" ViewMode="Tile" BorderThickness="1,0,1,0" BorderBrush="{StaticResource 浅灰边框}" Grid.Row="1">
+            <a:Ex.Menu>
+                <a:Menu>
+                    <a:Mi ID="复制Icons值" Icon="地址" Click="OnCopyIcons" />
+                    <a:Mi ID="复制名称" Icon="文件" Click="OnCopyName" />
+                    <a:Mi ID="复制字符按钮" Icon="鼠标" Click="OnCopyButton" />
+                    <a:Mi ID="复制TextBlock" Icon="粗体" Click="OnCopyBlock" />
+                </a:Menu>
+            </a:Ex.Menu>
+            <DataTemplate>
+                <StackPanel Padding="10">
+                    <a:Dot ID="Icon" FontSize="50" HorizontalAlignment="Center" />
+                    <a:Dot ID="FullName" Margin="0,10,0,0" HorizontalAlignment="Center" />
+                </StackPanel>
+            </DataTemplate>
+        </a:Lv>
+    </Grid>
 </a:Win>
