--- a/Client/Dt.App/Home/Login.xaml
+++ b/Client/Dt.App/Home/Login.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <!-- 标题 -->
-        <Grid HorizontalAlignment="Center" Background="Transparent" Grid.Row="1">
+        <Grid HorizontalAlignment="Center" Background="Transparent" DoubleTapped="OnShowTrace" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
