--- a/Client/Dt.App/Home/Login.xaml
+++ b/Client/Dt.App/Home/Login.xaml
@@ -28,7 +28,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Image Source="ms-appx:///Assets/logo.png" Height="50" Width="50" Stretch="None" />
-            <TextBlock x:Name="_tbTitle" FontSize="{StaticResource 大字号}" Margin="5,8,5,8" TextWrapping="Wrap" Grid.Column="1"/>
+            <TextBlock x:Name="_tbTitle" FontSize="{StaticResource 大字号}" Margin="5,8,5,8" Grid.Column="1"/>
         </Grid>
 
         <Grid x:Name="InfoPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed" Grid.Row="2">
