--- a/Client/Dt.Sample/FormView/FvData.xaml
+++ b/Client/Dt.Sample/FormView/FvData.xaml
@@ -10,8 +10,7 @@
             <a:Tab Title="本地库">
                 <a:Tab.Menu>
                     <a:Menu>
-                        <a:Mi ID="新建(Row)" Icon="加号" Click="OnNewLocalRow" />
-                        <a:Mi ID="新建(Obj)" Icon="加号" Click="OnNewLocalObj" />
+                        <a:Mi ID="新建" Icon="加号" Click="OnNewLocal" />
                         <a:Mi ID="保存" Icon="保存" Click="OnLocalSave" IsEnabled="{Binding IsDirty,ElementName=_fv1}" />
                         <a:Mi ID="删除" Icon="删除" Click="OnLocalDel" />
                         <a:Mi ID="撤消" Icon="撤消" Cmd="{Binding CmdUndo,ElementName=_fv1}" />
