--- a/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
+++ b/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
@@ -3,13 +3,50 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="本地库">
+    Title="本地库"
+    Home="库">
 
     <a:Pane>
-        <a:Tabs>
-            <a:Tab Title="本地库">
-                <a:Lv x:Name="_lv" Style="{StaticResource MainInfoLv}" ItemClick="OnMainInfoClick" />
+        <a:Tabs InitHeight="300">
+            <a:Tab Title="库">
+                <a:Lv x:Name="_lvDb" ItemClick="OnDbClick">
+                    <DataTemplate>
+                        <Grid Margin="10,0,10,0" Height="60">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel VerticalAlignment="Center">
+                                <a:Dot ID="name" />
+                                <a:Dot ID="info" FontSize="12" Foreground="{StaticResource 深灰边框}" />
+                            </StackPanel>
+                            <Button Content="备份" Click="OnBackup" VerticalAlignment="Center" Grid.Column="1" />
+                        </Grid>
+                    </DataTemplate>
+                </a:Lv>
+            </a:Tab>
+        </a:Tabs>
+        <a:Tabs InitHeight="600">
+            <a:Tab Title="表">
+                <a:Lv x:Name="_lvTbl" ItemClick="OnTblClick">
+                    <DataTemplate>
+                        <a:Dot ID="name" Margin="10,0,10,0" />
+                    </DataTemplate>
+                </a:Lv>
             </a:Tab>
         </a:Tabs>
     </a:Pane>
+    <a:Main>
+        <a:Tabs>
+            <a:Tab Title="数据">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="删除" Icon="删除" Click="OnDel" IsEnabled="{Binding HasSelected,ElementName=_lvData}" />
+                        <a:Mi ID="多选" Icon="全选" IsCheckable="True" a:Ex.LvMultiSelect="{Binding ElementName=_lvData}" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <a:Lv x:Name="_lvData" AutoCreateCol="True" />
+            </a:Tab>
+        </a:Tabs>
+    </a:Main>
 </a:Win>
