--- a/Client/Dt.Sample/FormView/FvData.xaml
+++ b/Client/Dt.Sample/FormView/FvData.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="本地库,数据库表,服务方法">
+    Home="本地库">
 
     <a:Main>
         <a:Tabs>
@@ -23,33 +23,6 @@
                     <a:CText ID="Content" Title="日志内容" AcceptsReturn="True" RowSpan="4" />
                     <a:CDate ID="CTime" Title="日志时间" />
                 </a:Fv>
-            </a:Tab>
-            <a:Tab Title="数据库表">
-                <a:Tab.Menu>
-                    <a:Menu>
-                        <a:Mi ID="新建" Icon="加号" Click="OnNewRow" />
-                        <a:Mi ID="保存" Icon="保存" Click="OnSave" IsEnabled="{Binding IsDirty,ElementName=_fv2}" />
-                        <a:Mi ID="删除" Icon="删除" Click="OnDel" />
-                        <a:Mi ID="撤消" Icon="撤消" Cmd="{Binding CmdUndo,ElementName=_fv2}" />
-                    </a:Menu>
-                </a:Tab.Menu>
-                <a:Fv x:Name="_fv2">
-                    <a:CList ID="loglevel" Title="日志级别">
-                        <a:CList.Items>
-                            <x:String>1</x:String>
-                            <x:String>2</x:String>
-                            <x:String>3</x:String>
-                            <x:String>4</x:String>
-                        </a:CList.Items>
-                    </a:CList>
-                    <a:CText ID="service" Title="日志所属服务" AutoCookie="True" />
-                    <a:CText ID="category" Title="日志分类名称" />
-                    <a:CText ID="message" Title="日志内容" AcceptsReturn="True" RowSpan="4" />
-                    <a:CDate ID="timestamp" Title="日志时间" />
-                </a:Fv>
-            </a:Tab>
-            <a:Tab Title="服务方法">
-                
             </a:Tab>
         </a:Tabs>
     </a:Main>
