避免win内部导航时自己导航到自己的情况

--- a/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
+++ b/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
@@ -24,7 +24,7 @@
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Tab.PhoneBar>
-                    <Button x:Name="_btnSearch" Content="查找权限" Click="OnNaviToSearch" />
+                    <Button Content="查找权限" Click="OnNaviToSearch" />
                 </a:Tab.PhoneBar>
                 <a:Lv x:Name="_lvPrv" ItemClick="OnItemClick" DataChanged="OnDataChanged">
                     <a:Ex.Menu>
