字符按钮居中样式

--- a/Client/Dt.Base/Themes/Global.xaml
+++ b/Client/Dt.Base/Themes/Global.xaml
@@ -249,6 +249,8 @@
                         <TextBlock Text="{TemplateBinding Content}"
                                    FontFamily="{StaticResource IconFont}"
                                    FontSize="{TemplateBinding FontSize}"
+                                   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                    Margin="{TemplateBinding Padding}" />
 
                         <VisualStateManager.VisualStateGroups>
