--- a/Client/Dt.App/Home/DefaultLogin.xaml
+++ b/Client/Dt.App/Home/DefaultLogin.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Dt.App.Login"
+    x:Class="Dt.App.DefaultLogin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Foreground="White">
