--- a/Client/Dt.Sample/FormView/BaseCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/BaseCellDemo.xaml
@@ -11,6 +11,7 @@
                 <a:Fv x:Name="_fv">
                     <a:CBar Title="基本格" />
                     <a:CText ID="txt" Title="文本框" />
+                    <a:CText ID="txtinput" Title="控制输入法" InputScope="Number" />
                     <a:CText ID="txtlong" Title="长文本" AcceptsReturn="True" RowSpan="2" UpdateTimely="False" />
                     <a:CText ID="txtpy" Title="拼音码" UpdateTimely="False" Changed="OnPyChanged" />
                     <a:CText ID="tgtpy" Title="输出拼音码" IsReadOnly="True" />
@@ -76,10 +77,15 @@
                             <Button Content="空数据源" Click="OnNull" />
                         </StackPanel>
                         <a:CBool Title="表单只读" ID="IsReadOnly" />
-                        <a:CBar Title="警告或提示信息" />
                         <StackPanel Orientation="Horizontal">
                             <Button Content="警告信息" Click="OnWarn" />
                             <Button Content="提示信息" Click="OnMsg" />
+                        </StackPanel>
+                        <a:CBar Title="控制输入法" />
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="输入数字" Click="OnNum" />
+                            <Button Content="输入手机号码" Click="OnPhoneNum" />
+                            <Button Content="默认输入法" Click="OnDefaultInput" />
                         </StackPanel>
                         <a:CBar Title="单元格" />
                     </a:Fv>
