Dt.App的Chat合并到Dt.Base

--- a/Client/Dt.Base/Chat/Parts/ChatList.xaml
+++ b/Client/Dt.Base/Chat/Parts/ChatList.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Dt.Base.ChatList"
+    x:Class="Dt.Base.Chat.ChatList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
