--- a/Client/Dt.Base/Chat/ChatHome.xaml
+++ b/Client/Dt.Base/Chat/ChatHome.xaml
@@ -1,15 +1,15 @@
 ﻿<a:Win
-    x:Class="Dt.App.Chat.ChatHome"
+    x:Class="Dt.Base.Chat.ChatHome"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    xmlns:chat="using:Dt.App.Chat"
+    xmlns:chat="using:Dt.Base.Chat"
     Home="消息,联系人">
 
     <a:Pane>
         <a:Tabs>
             <a:Tab Title="消息">
-                <a:ChatList ItemClick="OnItemClick" />
+                <chat:ChatList ItemClick="OnItemClick" />
             </a:Tab>
             <a:Tab Title="联系人">
                 <chat:ChatMemberList ItemClick="OnItemClick" />
@@ -19,7 +19,7 @@
     <a:Main>
         <a:Tabs>
             <a:Tab Title="聊天内容">
-                <a:ChatDetail x:Name="_detail" />
+                <chat:ChatDetail x:Name="_detail" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
