--- a/Client/Dt.Base/Chat/Parts/ChatDetail.xaml
+++ b/Client/Dt.Base/Chat/Parts/ChatDetail.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl
-    x:Class="Dt.Base.ChatDetail"
+    x:Class="Dt.Base.Chat.ChatDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:chat="using:Dt.Base.Chat">
 
     <UserControl.Resources>
         <Style x:Key="OtherPath" TargetType="Path">
@@ -134,6 +135,6 @@
               AutoScrollBottom="True"
               EnteredBrush="{x:Null}"
               PressedBrush="{x:Null}" />
-        <a:ChatInputBar x:Name="_inputBar" Visibility="Collapsed" Grid.Row="1" />
+        <chat:ChatInputBar x:Name="_inputBar" Visibility="Collapsed" Grid.Row="1" />
     </Grid>
 </UserControl>
