--- a/Client/Dt.Base/Chat/WebRTC/VideoRecver.xaml
+++ b/Client/Dt.Base/Chat/WebRTC/VideoRecver.xaml
@@ -12,7 +12,13 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid x:Name="_gridRecv" />
-        <Grid x:Name="_gridLocal" Height="150" HorizontalAlignment="Right" VerticalAlignment="Top" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid x:Name="_gridLocal" Grid.Column="1" />
+        </Grid>
         <TextBlock x:Name="_tbInfo" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Grid x:Name="_gridBtn" Height="50" Grid.Row="1">
             <Grid.ColumnDefinitions>
