--- a/Client/Dt.Sample/Structure/DlgDemo.xaml
+++ b/Client/Dt.Sample/Structure/DlgDemo.xaml
@@ -10,8 +10,9 @@
         <a:CText x:Name="_tgt" ID="Target" Title="相对目标" />
         <a:CBool ID="Pin" Title="固定不自动关闭" />
         <a:CBool ID="HideBar" Title="隐藏标题栏" />
-        <a:CBool ID="Resize" Title="禁止调整大小" />
-        <a:CBool ID="ShowWinVeil" Title="win模式显示遮罩" />
+        <a:CBool ID="Resize" Title="可以调整大小" />
+        <a:CBool ID="ShowVeil" Title="显示遮罩" />
+        <a:CBool ID="AllowRelayPress" Title="向下层对话框传递点击事件" />
         <StackPanel Orientation="Horizontal">
             <Button Content="显示对话框" Click="OnShow" />
             <Button Content="异步等待对话框" Click="OnShowAsync" />
