--- a/Client/Dt.Base/Structure/Menu/Parts/SubMenuDlg.xaml
+++ b/Client/Dt.Base/Structure/Menu/Parts/SubMenuDlg.xaml
@@ -2,11 +2,7 @@
     x:Class="Dt.Base.MenuView.SubMenuDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    Background="{StaticResource 浅灰背景}"
-    MinWidth="160"
-    HideTitleBar="True"
-    Resizeable="False">
+    xmlns:a="using:Dt.Base">
 
     <StackPanel x:Name="_panel" />
 </a:Dlg>
