--- a/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
@@ -52,10 +52,12 @@
                         </DataTemplate>
                     </a:CList>
                     <a:CList ID="code" Title="基础选项" Option="民族" />
-                    <a:CList ID="sexname" Title="性别" SrcID="id" TgtID="sex">
+                    <a:CList ID="sex" Title="性别" />
+                    <a:CList ID="idstrdsp" Title="IDStr" SrcID="id" TgtID="idstr">
                         <a:CList.Items>
-                            <a:IDStr ID="1" Str="男" />
-                            <a:IDStr ID="0" Str="女" />
+                            <a:IDStr ID="0" Str="选项一" />
+                            <a:IDStr ID="1" Str="选项二" />
+                            <a:IDStr ID="2" Str="选项三" />
                         </a:CList.Items>
                     </a:CList>
                     <a:CList ID="listrow" Title="模拟IDString" SrcID="id" TgtID="listrowid" LoadData="OnLoadDataTable" AfterSelect="OnSelectedRow" />
